[build-system]
requires = ["setuptools", "setuptools-scm"]
build-backend = "setuptools.build_meta"

[project]
name = "pmpsdb_client"
description = "Client application for interfacing with the PMPS database and the deployed PLC files."
readme = "README.md"
requires-python = ">=3.9"
keywords = ["pmps", "pmpsdb", "lcls"]
license = {text = "BSD 3-Clause License"}
classifiers = [
    "Programming Language :: Python :: 3",
]
dependencies = [
    "ophyd",
    "pcdscalc",
    "pcdsutils",
    "prettytable",
    "qtpy",
]
dynamic = ["version"]

[project.optional-dependencies]
gui = ["PyQt5"]

[project.scripts]
pmpsdb = "pmpsdb_client"

# ... other project metadata fields as specified in:
#     https://packaging.python.org/en/latest/specifications/declaring-project-metadata/
